2005-10-13  Allan Sandfeld Jensen <kde@carewolf.com>

        WebCore merge: blur and focus on buttons

        * html/html_formimpl.{cpp.h}: Add form and blur
        * dom/html_form.{cpp,h}: ditto
        * ecma/kjs_html.{cpp,h}: ditto

2005-10-08  Germain Garand  <germain@ebooksfrance.org>

        Port soft-hyphen support from WebCore

        * rendering/bidi.cpp (findNextLineBreak): main skipping/breaking logic

        * rendering/render_text.{cpp,h} (calcMinMaxWidth): account for soft hyphen

2005-10-08  Germain Garand  <germain@ebooksfrance.org>

        Follow Mozilla/Opera in considering the Window object as an implementation of the AbstractView/ViewCSS
        DOM2 interfaces. Return the Window object when available ; an AbstractView if not.

        * ecma/kjs_dom.cpp (DefaultView): return the view's Window object if available.

        * ecma/kjs_window.{cpp,h} (GetComputedStyle): implement, as in AbstractView.

2005-10-07  Germain Garand  <germain@ebooksfrance.org>

        * rendering/bidi.cpp (findNextLineBreak): integrate all positioned inlines in the lineboxes to get a correct static position
        in initial whitespace. Use some midpoints voodoo to take care of whitespace.

        cf. unsorted/113527.html

2005-10-03  Germain Garand  <germain@ebooksfrance.org>

        let the initial containing block be the Canvas, as mandated by latest
        draft of CSS 2.1 10.1.1

        * rendering/render_object.cpp (containingBlock, container): don't special case the Root, it's no more
        an initial containing block.

        * rendering/render_block.{cpp,h} (*AbsolutePosition): separate calculation
        of positioned objects' contribution to the object's rightmost/lower/leftmost position.

        * rendering/render_box.cpp (setStyle, containingBlockWidth): checking for isCanvas where applicable.

        * rendering/render_canvas.cpp (docWidth, docHeight):
        take into account absolutely positioned objects from the canvas itself.
